MDEV-29602 : Galera debug build crashes when the spider plugin is enabled

Spider system tables should be created so that wsrep_on=OFF.